<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        style="@style/padrao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/etTitulo"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ntitulo"
            android:hint="@string/ntitulo" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:textSize="20sp"
                android:id="@+id/etPeriodo"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nperiodo"
                android:hint="@string/nperiodo" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:id="@+id/etDescr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ndescr"
                android:hint="@string/ndescr" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSalvar"
                android:contentDescription="@string/salvar"
                android:textColor="#ffffff"
                android:background="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/salvar" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>