<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        style="@style/padrao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/etTitulo"
            android:textColor="@color/colorAccent"
            android:contentDescription="@string/titulo"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:textSize="20sp"
                android:id="@+id/etPeriodo"
                android:contentDescription="@string/periodo"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/periodo" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:id="@+id/etDescr"
                android:contentDescription="@string/descr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descr" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnAdd"
                android:textColor="#ffffff"
                android:background="@color/colorAccent"
                android:contentDescription="@string/add"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:onClick="Add"
                android:text="@string/add" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>