<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        style="@style/padrao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tvId"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="(ID)" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/titulo" />

            <TextView
                android:textSize="15sp"
                android:id="@+id/tvPeriodo"
                android:textStyle="bold"
                android:layout_width= "wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/periodo" />
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/padrao">

            <TextView
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:id="@+id/tvDescr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descr" />

        </LinearLayout>

</LinearLayout>